# ATCRA

./: README.md
SimModel/: Tool.SLDPRT  Waist.SLDPRT  Wrist2.SLDPRT
sabry/: CMakeLists.txt  package.xml
sabry/config/: joint_names_sabry.yaml
sabry/launch/: display.launch  gazebo.launch.xml
sabry/meshes/: Gripper.STL  rack_link.STL
sabry/urdf/: sabry.csv  sabry.urdf.xacro
sabry_hardware/: CMakeLists.txt  package.xml  sabry_hardware.xml
sabry_hardware/hardware/sketch_jan30a/: serial_rtos.ino
sabry_hardware/include/sabry_hardware/: sabry_system.hpp
sabry_hardware/launch/: sabry_bringup.launch.xml
sabry_hardware/scripts/: camera_stream.py  inspection_v3.py  lifecycle_manager.py  linear_motor_node.py  operation.py  tool_change_manager.py
sabry_hardware/src/: gripper_system.cpp  sabry_system.cpp
sabry_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_planning_pipeline.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner.yaml  ros2_controllers.yaml  sabry.ros2_control.xacro  sabry.srdf
sabry_moveit/launch/: demo.launch.py
sabrydemo_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_planning_pipeline.yaml  ros2_controllers.yaml  sabry.ros2_control.xacro  sabry.srdf  sabry.urdf.xacro
sabrydemo_moveit/launch/: demo.launch.py
